[project]
name = "sshconf"
authors = [
    {name = "Søren A D", email = "soren@hamisoke.com"},
]
dependencies = []
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = [
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3',
	'Topic :: Software Development :: Libraries :: Python Modules',
	'Topic :: Software Development :: Libraries',
]
requires-python = ">=3.5"
readme = "README.md"
keywords = [
	'ssh', 'config'
]

[project.urls]
homepage = "https://github.com/sorend/sshconf"

[project.optional-dependencies]
test = [
  "tox",
  "tox-gh-actions",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".gitignore", ".github", ".ci", "codecov.yml", "Makefile"]

[tool.pytest.ini_options]
addopts = "-v --cov-fail-under=60 --cov=sshconf"
